# react-native-crystals

./: .clangd  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ReactNativeKyber.podspec  SECURITY.md  package.json  react-native-kyber-1.0.0.tgz  readMe.md  test-local.sh  tsconfig.build.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  question.md
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: DilithiumModule.cpp  KyberModule.cpp
android/src/main/java/com/reactnativekyber/: DilithiumModule.java  KyberModule.java  KyberPackage.java  ReactNativeKyberPackage.java
android/src/main/jni/: CMakeLists.txt
android/src/main/jni/dilithium-c/: config.h  poly.h  sign.c
android/src/main/jni/kyber-c/: KyberModule.cpp  SimpleModule.cpp  kyber_wrapper.c
ios/ReactNativeKyber/: DilithiumModule.mm  DilithiumModule.swift  KyberModule.mm  KyberModule.swift  ReactNativeKyber-Bridging-Header.h  ReactNativeKyber-Bridging-Header.h.h  ReactNativeKyber.swift  dilithium_namespace.h  dilithium_wrapper.c  kyber_namespace.h  kyber_wrapper.c
ios/dilithium-c/: Makefile  randombytesd.c  randombytesd.h
ios/kyber-c/: CMakeLists.txt
lib/commonjs/: index.js  index.js.map
lib/module/: index.js  index.js.map
lib/typescript/: index.d.ts  index.d.ts.map
src/: index.ts
